Baseline model created

--- a/NLP_with_Tensorflow.ipynb
+++ b/NLP_with_Tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPHUmIKBw2diuzgvcGDMtQ/"
+      "authorship_tag": "ABX9TyPZj0eJbmwcRrBkeZqoci8P"
     },
     "kernelspec": {
       "name": "python3",
@@ -1313,6 +1313,156 @@
       "source": [],
       "metadata": {
         "id": "XDWfDiIPAneq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model 0: Naive Bayes"
+      ],
+      "metadata": {
+        "id": "Y2RjXPLnPMho"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.naive_bayes import MultinomialNB\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "\n",
+        "model_0 = Pipeline([\n",
+        "  ('tfidf', TfidfVectorizer()),\n",
+        "  ('clf', MultinomialNB())  \n",
+        "])\n",
+        "\n",
+        "model_0.fit(X_train,y_train)\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3Pjqr87uPV12",
+        "outputId": "7c1f7c53-0065-463e-cf90-be05b7ae5db5"
+      },
+      "execution_count": 69,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "Pipeline(steps=[('tfidf', TfidfVectorizer()), ('clf', MultinomialNB())])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 69
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "baseline_score = model_0.score(X_test,y_test)\n",
+        "print(f'Our model achieves an accuracy of: {baseline_score*100:.2f}%')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "N4rmFyESQ6zT",
+        "outputId": "2982c99d-2b74-45e2-b9da-65845a67594e"
+      },
+      "execution_count": 72,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Our model achieves an accuracy of: 79.27%\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "baseline_preds = model_0.predict(X_test)"
+      ],
+      "metadata": {
+        "id": "kMUvGF_GRK7V"
+      },
+      "execution_count": 73,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
+        "\n",
+        "def calculate_results(y_true,\n",
+        "                      y_pred):\n",
+        "  \"\"\"\n",
+        "  Calculates model's accuracy, precision, recall and f1 score of \n",
+        "  binary classification.\n",
+        "  \"\"\"\n",
+        "\n",
+        "  model_accuracy = accuracy_score(y_true, y_pred)\n",
+        "  model_precision, model_recall, model_f1, _ = precision_recall_fscore_support(y_true,y_pred, average = 'weighted')\n",
+        "  model_results = {\n",
+        "      'accuracy':model_accuracy,\n",
+        "      'precision':model_precision,\n",
+        "      'recall':model_recall,\n",
+        "      'f1':model_f1\n",
+        "  }\n",
+        "\n",
+        "  return model_results"
+      ],
+      "metadata": {
+        "id": "pKwnGWxrSWzQ"
+      },
+      "execution_count": 74,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "baseline_results = calculate_results(y_test,\n",
+        "                                     baseline_preds)\n",
+        "\n",
+        "baseline_results"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kDXuVyJETUEn",
+        "outputId": "a4bdc32e-9235-4acc-de3a-8eecb99e4d6d"
+      },
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 0.7926509186351706,\n",
+              " 'precision': 0.8111390004213173,\n",
+              " 'recall': 0.7926509186351706,\n",
+              " 'f1': 0.7862189758049549}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 76
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Lu8RIIHHTdVu"
       },
       "execution_count": null,
       "outputs": []
