Used CNN to solve NLP problem

--- a/NLP_with_Tensorflow.ipynb
+++ b/NLP_with_Tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNTXLWp87+AghAu5Y4oAvTz"
+      "authorship_tag": "ABX9TyPUWs3+QfuGR5FDuuV1yJXl"
     },
     "kernelspec": {
       "name": "python3",
@@ -2139,6 +2139,489 @@
       "source": [],
       "metadata": {
         "id": "miTKEGgFumjQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model 4: Bidirectional"
+      ],
+      "metadata": {
+        "id": "vltYXnzku3Xj"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Set random seed and create embedding layer (new embedding layer for each model)\n",
+        "tf.random.set_seed(42)\n",
+        "\n",
+        "# Build an RNN using the GRU cell\n",
+        "inputs = layers.Input(shape=(1,), dtype=\"string\")\n",
+        "x = text_vectorizer(inputs)\n",
+        "x = embedding(x)\n",
+        "x = layers.Bidirectional(layers.LSTM(64))(x) \n",
+        "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+        "model_4 = tf.keras.Model(inputs, outputs, name=\"model_4_bidirectional\")\n"
+      ],
+      "metadata": {
+        "id": "PNy9ZajAu-rD"
+      },
+      "execution_count": 165,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "model_4.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "sBwDLyYZvkPJ",
+        "outputId": "0338378a-f54c-4e9e-d3a5-6bdac5d06ec7"
+      },
+      "execution_count": 166,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model_4_bidirectional\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " input_19 (InputLayer)       [(None, 1)]               0         \n",
+            "                                                                 \n",
+            " text_vectorization_5 (TextV  (None, 15)               0         \n",
+            " ectorization)                                                   \n",
+            "                                                                 \n",
+            " embedding_1 (Embedding)     (None, 15, 128)           1280000   \n",
+            "                                                                 \n",
+            " bidirectional_2 (Bidirectio  (None, 128)              98816     \n",
+            " nal)                                                            \n",
+            "                                                                 \n",
+            " dense_21 (Dense)            (None, 1)                 129       \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 1,378,945\n",
+            "Trainable params: 1,378,945\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "model_4.compile(loss=\"binary_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "B_ZvYCsjwDIX"
+      },
+      "execution_count": 167,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Fit model\n",
+        "model_4_history = model_4.fit(train_sentences,\n",
+        "                              train_labels,\n",
+        "                              epochs=5,\n",
+        "                              validation_data=(val_sentences, val_labels),\n",
+        "                              callbacks=[create_tensorboard_callback(SAVE_DIR, \"BIDIRECTIONAL\")])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zQf1wZFwwbhY",
+        "outputId": "0ccc8253-45e7-4b40-8efa-eec5ea9a0c7e"
+      },
+      "execution_count": 168,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving TensorBoard log files to: model_logs/BIDIRECTIONAL/20230212-175248\n",
+            "Epoch 1/5\n",
+            "215/215 [==============================] - 15s 44ms/step - loss: 0.1326 - accuracy: 0.9580 - val_loss: 0.7511 - val_accuracy: 0.7822\n",
+            "Epoch 2/5\n",
+            "215/215 [==============================] - 3s 12ms/step - loss: 0.0780 - accuracy: 0.9701 - val_loss: 0.9594 - val_accuracy: 0.7808\n",
+            "Epoch 3/5\n",
+            "215/215 [==============================] - 3s 12ms/step - loss: 0.0597 - accuracy: 0.9737 - val_loss: 1.2177 - val_accuracy: 0.7756\n",
+            "Epoch 4/5\n",
+            "215/215 [==============================] - 2s 10ms/step - loss: 0.0541 - accuracy: 0.9772 - val_loss: 1.1908 - val_accuracy: 0.7743\n",
+            "Epoch 5/5\n",
+            "215/215 [==============================] - 3s 13ms/step - loss: 0.0454 - accuracy: 0.9790 - val_loss: 1.3512 - val_accuracy: 0.7664\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "# Make predictions on the validation data\n",
+        "model_4_pred_probs = model_4.predict(val_sentences)\n",
+        "model_4_pred_probs.shape, model_4_pred_probs[:10]\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YwD0W9H1wgz5",
+        "outputId": "c60b0f92-edae-4d1f-ab0b-28e63ad79e7c"
+      },
+      "execution_count": 170,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "24/24 [==============================] - 2s 4ms/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((762, 1), array([[2.2238968e-03],\n",
+              "        [6.1419499e-01],\n",
+              "        [9.9997139e-01],\n",
+              "        [1.3995788e-01],\n",
+              "        [1.2452779e-05],\n",
+              "        [9.9984407e-01],\n",
+              "        [9.6020871e-01],\n",
+              "        [9.9998713e-01],\n",
+              "        [9.9997830e-01],\n",
+              "        [7.3475444e-01]], dtype=float32))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 170
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Convert prediction probabilities to prediction classes\n",
+        "model_4_preds = tf.squeeze(tf.round(model_4_pred_probs))\n",
+        "model_4_preds[:10]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8YDCWJojwzJ9",
+        "outputId": "1129fd4d-5e23-41d1-af54-1b4065d4db28"
+      },
+      "execution_count": 172,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=float32, numpy=array([0., 1., 1., 0., 0., 1., 1., 1., 1., 1.], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 172
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Calcuate model_3 results\n",
+        "model_4_results = calculate_results(y_true=val_labels, \n",
+        "                                    y_pred=model_4_preds)\n",
+        "model_4_results\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "a5G51eT7wnzV",
+        "outputId": "c54bdd75-3d7a-449d-8dd6-93bdb64fb03e"
+      },
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 76.64041994750657,\n",
+              " 'precision': 0.7679094748917975,\n",
+              " 'recall': 0.7664041994750657,\n",
+              " 'f1': 0.7642857598265804}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 173
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Model 5: CNN"
+      ],
+      "metadata": {
+        "id": "MrkQHDPOxQ3t"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Set random seed and create embedding layer (new embedding layer for each model)\n",
+        "tf.random.set_seed(42)\n",
+        "from tensorflow.keras import layers\n",
+        "model_5_embedding = layers.Embedding(input_dim=max_vocab_length,\n",
+        "                                     output_dim=128,\n",
+        "                                     embeddings_initializer=\"uniform\",\n",
+        "                                     input_length=max_length,\n",
+        "                                     name=\"embedding_5\")\n",
+        "\n",
+        "# Create 1-dimensional convolutional layer to model sequences\n",
+        "from tensorflow.keras import layers\n",
+        "inputs = layers.Input(shape=(1,), dtype=\"string\")\n",
+        "x = text_vectorizer(inputs)\n",
+        "x = model_5_embedding(x)\n",
+        "x = layers.Conv1D(filters=32, kernel_size=5, activation=\"relu\")(x)\n",
+        "x = layers.GlobalMaxPool1D()(x)\n",
+        "# x = layers.Dense(64, activation=\"relu\")(x) # optional dense layer\n",
+        "outputs = layers.Dense(1, activation=\"sigmoid\")(x)\n",
+        "model_5 = tf.keras.Model(inputs, outputs, name=\"model_5_Conv1D\")\n",
+        "\n",
+        "# Compile Conv1D model\n",
+        "model_5.compile(loss=\"binary_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "\n",
+        "# Get a summary of our 1D convolution model\n",
+        "model_5.summary()\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "F1YyURPqxT16",
+        "outputId": "90693f54-071b-4181-e373-b22f7027de10"
+      },
+      "execution_count": 177,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model_5_Conv1D\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " input_23 (InputLayer)       [(None, 1)]               0         \n",
+            "                                                                 \n",
+            " text_vectorization_5 (TextV  (None, 15)               0         \n",
+            " ectorization)                                                   \n",
+            "                                                                 \n",
+            " embedding_5 (Embedding)     (None, 15, 128)           1280000   \n",
+            "                                                                 \n",
+            " conv1d (Conv1D)             (None, 11, 32)            20512     \n",
+            "                                                                 \n",
+            " global_max_pooling1d (Globa  (None, 32)               0         \n",
+            " lMaxPooling1D)                                                  \n",
+            "                                                                 \n",
+            " dense_22 (Dense)            (None, 1)                 33        \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 1,300,545\n",
+            "Trainable params: 1,300,545\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Fit the model\n",
+        "model_5_history = model_5.fit(train_sentences,\n",
+        "                              train_labels,\n",
+        "                              epochs=5,\n",
+        "                              validation_data=(val_sentences, val_labels),\n",
+        "                              callbacks=[create_tensorboard_callback(SAVE_DIR, \n",
+        "                                                                     \"Conv1D\")])\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9_eOOqofz_2B",
+        "outputId": "75066b99-18ac-4eaf-ac5a-54e1764b43d7"
+      },
+      "execution_count": 178,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving TensorBoard log files to: model_logs/Conv1D/20230212-181003\n",
+            "Epoch 1/5\n",
+            "215/215 [==============================] - 14s 36ms/step - loss: 0.5675 - accuracy: 0.7152 - val_loss: 0.4713 - val_accuracy: 0.7769\n",
+            "Epoch 2/5\n",
+            "215/215 [==============================] - 2s 9ms/step - loss: 0.3430 - accuracy: 0.8608 - val_loss: 0.4701 - val_accuracy: 0.7940\n",
+            "Epoch 3/5\n",
+            "215/215 [==============================] - 2s 9ms/step - loss: 0.2129 - accuracy: 0.9221 - val_loss: 0.5300 - val_accuracy: 0.7585\n",
+            "Epoch 4/5\n",
+            "215/215 [==============================] - 2s 11ms/step - loss: 0.1345 - accuracy: 0.9549 - val_loss: 0.6113 - val_accuracy: 0.7651\n",
+            "Epoch 5/5\n",
+            "215/215 [==============================] - 2s 10ms/step - loss: 0.0935 - accuracy: 0.9702 - val_loss: 0.6698 - val_accuracy: 0.7808\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Make predictions with model_5\n",
+        "model_5_pred_probs = model_5.predict(val_sentences)\n",
+        "model_5_pred_probs[:10]\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CvJX3EWM0dgw",
+        "outputId": "c6fecac4-5c5e-4ea2-b6be-86d5708fda0f"
+      },
+      "execution_count": 179,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "24/24 [==============================] - 0s 4ms/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.22184305],\n",
+              "       [0.71498793],\n",
+              "       [0.9997261 ],\n",
+              "       [0.05716905],\n",
+              "       [0.00454145],\n",
+              "       [0.99049884],\n",
+              "       [0.910782  ],\n",
+              "       [0.9973901 ],\n",
+              "       [0.9987005 ],\n",
+              "       [0.20007418]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 179
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Convert model_5 prediction probabilities to labels\n",
+        "model_5_preds = tf.squeeze(tf.round(model_5_pred_probs))\n",
+        "model_5_preds[:10]\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "tJfyoPZv0lbr",
+        "outputId": "448043a8-ab84-4530-b4ae-3b9c1e61b770"
+      },
+      "execution_count": 180,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=float32, numpy=array([0., 1., 1., 0., 0., 1., 1., 1., 1., 0.], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 180
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Calculate model_5 evaluation metrics \n",
+        "model_5_results = calculate_results(y_true=val_labels, \n",
+        "                                    y_pred=model_5_preds)\n",
+        "model_5_results\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "UuIISZ7f0njD",
+        "outputId": "0caa09a6-d8d1-4452-d795-b060b4299aaa"
+      },
+      "execution_count": 181,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 78.08398950131233,\n",
+              " 'precision': 0.7834583238190046,\n",
+              " 'recall': 0.7808398950131233,\n",
+              " 'f1': 0.778533312750939}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 181
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "sJxqbhav0p99"
       },
       "execution_count": null,
       "outputs": []
