Pretrained model from tensorflow hub used

--- a/NLP_with_Tensorflow.ipynb
+++ b/NLP_with_Tensorflow.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPUWs3+QfuGR5FDuuV1yJXl"
+      "authorship_tag": "ABX9TyPYpUEsZRi3NctetUE8ntWa"
     },
     "kernelspec": {
       "name": "python3",
@@ -2618,10 +2618,327 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "## Model 6: Transfer Learning"
+      ],
+      "metadata": {
+        "id": "v2RzacDA06a9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sample_sentence = random.choice(X_train)\n",
+        "sample_sentence"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "y5aa3sg222x3",
+        "outputId": "ee7654b2-b56b-43ec-bc22-84a72d076b82"
+      },
+      "execution_count": 191,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "\"I added a video to a @YouTube playlist http://t.co/1vjAlJA1SX GTA 5 Funny Moments - 'OBLITERATION!' (GTA 5 Online Funny Moments)\""
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 191
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import tensorflow_hub as hub\n",
+        "embed = hub.load('https://tfhub.dev/google/universal-sentence-encoder/4')\n",
+        "embeded_sample = embed([sample_sentence,\n",
+        "                        'When you can the universal sentece encoder on a sentence, it is ruined.'])\n"
+      ],
+      "metadata": {
+        "id": "UrS-T8hf1BTB"
+      },
+      "execution_count": 195,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "print(embeded_sample[1][:50])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "P3x4uKeV3g8V",
+        "outputId": "d89ce111-1948-4889-c630-37b67c5c5235"
+      },
+      "execution_count": 197,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "tf.Tensor(\n",
+            "[ 0.03767121 -0.03241401  0.00408085  0.01597857  0.03960412 -0.05379619\n",
+            " -0.06408953  0.04216724  0.06099323  0.0507115  -0.01161463 -0.05228469\n",
+            "  0.03538141  0.06870867  0.0644431  -0.10066213  0.00844224 -0.01198775\n",
+            "  0.03438548 -0.01264153  0.04575362  0.0173762   0.05059876  0.05105478\n",
+            " -0.09299114  0.07794157  0.00671705  0.00348284  0.00580585  0.03431151\n",
+            "  0.03400987  0.01300427  0.02220811 -0.02784561 -0.10189427 -0.03729674\n",
+            "  0.07078869  0.07213486 -0.00352875 -0.01204607  0.00065451 -0.05643779\n",
+            "  0.04828857 -0.0280099  -0.01790225  0.00684707 -0.00861704 -0.03605994\n",
+            " -0.05381995 -0.00665173], shape=(50,), dtype=float32)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sentence_encoder_layer = hub.KerasLayer('https://tfhub.dev/google/universal-sentence-encoder/4',\n",
+        "                                        input_shape = [],\n",
+        "                                        dtype = tf.string,\n",
+        "                                        trainable = False,\n",
+        "                                        name = 'USE')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XwVFZthO38G9",
+        "outputId": "fff23260-f409-4448-dd24-058ca4fea66c"
+      },
+      "execution_count": 198,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:tensorflow:Please fix your imports. Module tensorflow.python.training.tracking.data_structures has been moved to tensorflow.python.trackable.data_structures. The old module will be deleted in version 2.11.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Create model using the Sequential API\n",
+        "model_6 = tf.keras.Sequential([\n",
+        "  sentence_encoder_layer, # take in sentences and then encode them into an embedding\n",
+        "  layers.Dense(64, activation=\"relu\"),\n",
+        "  layers.Dense(1, activation=\"sigmoid\")\n",
+        "], name=\"model_6_USE\")\n",
+        "\n",
+        "# Compile model\n",
+        "model_6.compile(loss=\"binary_crossentropy\",\n",
+        "                optimizer=tf.keras.optimizers.Adam(),\n",
+        "                metrics=[\"accuracy\"])\n",
+        "\n",
+        "model_6.summary()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Ls82Yld24Z2x",
+        "outputId": "99a56d35-5bb7-480d-f410-635e300de25c"
+      },
+      "execution_count": 202,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"model_6_USE\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " USE (KerasLayer)            (None, 512)               256797824 \n",
+            "                                                                 \n",
+            " dense_24 (Dense)            (None, 64)                32832     \n",
+            "                                                                 \n",
+            " dense_25 (Dense)            (None, 1)                 65        \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 256,830,721\n",
+            "Trainable params: 32,897\n",
+            "Non-trainable params: 256,797,824\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Train a classifier on top of pretrained embeddings\n",
+        "model_6_history = model_6.fit(train_sentences,\n",
+        "                              train_labels,\n",
+        "                              epochs=5,\n",
+        "                              validation_data=(val_sentences, val_labels),\n",
+        "                              callbacks=[create_tensorboard_callback(SAVE_DIR, \n",
+        "                                                                     \"tf_hub_sentence_encoder\")])\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qWZ7hEaZ44uh",
+        "outputId": "b48ac034-d4b9-4d15-adb4-0f5cf8c58522"
+      },
+      "execution_count": 203,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Saving TensorBoard log files to: model_logs/tf_hub_sentence_encoder/20230212-183206\n",
+            "Epoch 1/5\n",
+            "215/215 [==============================] - 7s 16ms/step - loss: 0.5069 - accuracy: 0.7843 - val_loss: 0.4474 - val_accuracy: 0.7992\n",
+            "Epoch 2/5\n",
+            "215/215 [==============================] - 3s 13ms/step - loss: 0.4150 - accuracy: 0.8146 - val_loss: 0.4361 - val_accuracy: 0.8110\n",
+            "Epoch 3/5\n",
+            "215/215 [==============================] - 3s 13ms/step - loss: 0.4001 - accuracy: 0.8224 - val_loss: 0.4318 - val_accuracy: 0.8110\n",
+            "Epoch 4/5\n",
+            "215/215 [==============================] - 5s 22ms/step - loss: 0.3927 - accuracy: 0.8273 - val_loss: 0.4272 - val_accuracy: 0.8136\n",
+            "Epoch 5/5\n",
+            "215/215 [==============================] - 3s 15ms/step - loss: 0.3863 - accuracy: 0.8298 - val_loss: 0.4288 - val_accuracy: 0.8163\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Make predictions with USE TF Hub model\n",
+        "model_6_pred_probs = model_6.predict(val_sentences)\n",
+        "model_6_pred_probs[:10]\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QBdSXsmF5U7F",
+        "outputId": "c948a1a6-a451-4438-b306-999d6edd1d07"
+      },
+      "execution_count": 204,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "24/24 [==============================] - 1s 18ms/step\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[0.15214275],\n",
+              "       [0.7284311 ],\n",
+              "       [0.9879579 ],\n",
+              "       [0.19768031],\n",
+              "       [0.72325855],\n",
+              "       [0.664342  ],\n",
+              "       [0.98169726],\n",
+              "       [0.97915477],\n",
+              "       [0.92784834],\n",
+              "       [0.07971156]], dtype=float32)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 204
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Convert prediction probabilities to labels\n",
+        "model_6_preds = tf.squeeze(tf.round(model_6_pred_probs))\n",
+        "model_6_preds[:10]\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "PacIjj0X5kT9",
+        "outputId": "a289bda2-f8db-41b8-bc58-1c283f03ea9b"
+      },
+      "execution_count": 205,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<tf.Tensor: shape=(10,), dtype=float32, numpy=array([0., 1., 1., 0., 1., 1., 1., 1., 1., 0.], dtype=float32)>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 205
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "\n",
+        "# Calculate model 6 performance metrics\n",
+        "model_6_results = calculate_results(val_labels, model_6_preds)\n",
+        "model_6_results\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1RFCXcdr5mOE",
+        "outputId": "f98bb4a1-e5fa-4c80-b487-f0f4e4cd947a"
+      },
+      "execution_count": 206,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'accuracy': 81.62729658792651,\n",
+              " 'precision': 0.8187546712946793,\n",
+              " 'recall': 0.8162729658792651,\n",
+              " 'f1': 0.8147089025083661}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 206
+        }
+      ]
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "sJxqbhav0p99"
+        "id": "tH9UHp0a5nyT"
       },
       "execution_count": null,
       "outputs": []
